broken image links on landing page will default to fallback picture

--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -70,7 +70,7 @@
                                   <img alt="Static User Image" src="">
                                   <h3>User</h3>
                                   <%} else {%>
-                                    <img id="userCarouselPic" class="backup_picture" alt="<%=users[userNum].username%> Image" src="<%=users[userNum].avatar%>">
+                                    <img id="userCarouselPic" class="backup_picture" alt="<%=users[userNum].username%> Image" src="afklj">
                                      <h3>
                                      <a id="user-carousel" href="/user"><%=users[userNum].username%></a></h3>
                                   <%}%>
@@ -102,7 +102,7 @@
                                   <img class="backup_picture" id="eventCarouselPic" alt="Static Event Image" src="">
                                   <h3>Event</h3>
                                 <%} else {%>
-                                  <img id="eventCarouselPic" alt="<%=events[eventNum].name%> Image" src="<%=events[eventNum].img%>">
+                                  <img class="backup_picture" id="eventCarouselPic" alt="<%=events[eventNum].name%> Image" src="<%=events[eventNum].img%>">
                                   <h3>
                                    <a id="event-carousel" href="/event"><%=events[eventNum].name%></a></h3>
                                 <%}%>
