--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -70,7 +70,7 @@
                                   <img alt="Static User Image" src="">
                                   <h3>User</h3>
                                   <%} else {%>
-                                    <img id="userCarouselPic" class="backup_picture" alt="<%=users[userNum].username%> Image" src="afklj">
+                                    <img id="userCarouselPic" class="backup_picture" alt="<%=users[userNum].username%> Image" src="<%=users[userNum].avatar%>">
                                      <h3>
                                      <a id="user-carousel" href="/user"><%=users[userNum].username%></a></h3>
                                   <%}%>
