fixed artist model inconsistencies

--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -41,7 +41,7 @@
                   </select> <br/>
 
                 <label class= "control-label" for="artistName">Artist Name:</label>
-    						<input type="text" class= "form-control" name="name" id= "artistName" placeholder="Name"><br />
+    						<input type="text" class= "form-control" name="name" id="artistName" placeholder="Name"><br />
 
     						<label class= "control-label" for="artistGenre">Genre:</label>
     						<input type="text" class= "form-control" name="genre" placeholder="Genre"><br />
@@ -53,7 +53,7 @@
     						<input type="text" class= "form-control" name="website" placeholder="Website"><br />
 
     						<label class= "control-label" for="artistImage">Image Link:</label>
-    						<input type="text" class= "form-control" name="img" placeholder="Image Link"><br />
+    						<input type="text" class= "form-control" name="avatar" placeholder="Image Link"><br />
 
     						<label class= "control-label" for="artistDescription">Artist Description:</label><br />
     						<textarea name="description" rows="8" class="form-control" placeholder="Description"></textarea><br /><br />
