--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -39,7 +39,7 @@
               <div id="card hovercard">
 
                   <div class="card-background">
-                    <img id="artistListPic" class="card-bkimg backup_picture" alt="<%=artist.name%>'s Avatar" src="<%=artist.img%>">
+                    <img id="artistListPic" class="card-bkimg backup_picture" alt="<%=artist.name%>'s Avatar" src="<%=artist.avatar%>">
                   </div>
 
                   <div class="card-info"> <span class="card-title"><h3><%=artist.name%></h3></span>
