--- a/views/artist/edit.ejs
+++ b/views/artist/edit.ejs
@@ -46,7 +46,7 @@
               <input type="text" class= "form-control" name="website" value="<%=artist.website%>"><br />
 
               <label class= "control-label" for="artistImage">Edit Image:</label>
-              <input type="text" class= "form-control" name="img" value=""><br />
+              <input type="text" class= "form-control" name="avatar" value=""><br />
 
               <label class= "control-label" for="artistDescription">Edit Artist Description:</label><br />
               <textarea name="description" rows="12" cols="80" placeholder="Description"><%=artist.description%></textarea><br /><br />
