--- a/views/artist/index.ejs
+++ b/views/artist/index.ejs
@@ -40,7 +40,7 @@
 			<%for (let i = 0; i < artists.length; i++) {%>
 				<div class="picContainer-fluid">
 					<div class="col-med-6">
-							<img src="<%=artists[i].img%>" id="artistListPic" class="img-responsive backup_picture" style="width:100%" alt="<%=artists[i].name%>'s Photo" >
+							<img src="<%=artists[i].avatar%>" id="artistListPic" class="img-responsive backup_picture" style="width:100%" alt="<%=artists[i].name%>'s Photo" >
 				
 
 							<div class="overlay">
