--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -84,7 +84,7 @@
                                     <img id="artistCarouselPic" alt="Static Artist Image" src="">
                                     <h3>Artist</h3>
                                     <%} else {%>
-                                      <img class="backup_picture" id="artistCarouselPic" alt="<%=artists[artistNum].name%> Image" src="<%=artists[artistNum].img%>">
+                                      <img class="backup_picture" id="artistCarouselPic" alt="<%=artists[artistNum].name%> Image" src="<%=artists[artistNum].avatar%>">
                                       <h3>
                                         <a id="artist-carousel" href="/artist">
                                           <%=artists[artistNum].name%>
