pictures on show pages now align in the center

--- a/less/style.less
+++ b/less/style.less
@@ -170,6 +170,10 @@ a, #user-carousel, #artist-carousel, #event-carousel {
 		}
 }
 
+#userShowPic, #artistShowPic, #eventShowPic {
+	text-align: center;
+}
+
 .card-title {
 	h3 {
 		font-size: 36px;
