--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -32,7 +32,7 @@
 				<div class="row justify-content-around">
 					<div class="card-hovercard">
 						<div class="card-background">
-		           <img id="userListPic" class="card-bkimg backup_picture" alt="<%=user.username%>'s Avatar" src="<%=user.avatar%>">
+		           <img id="userShowPic" class="card-bkimg backup_picture" alt="<%=user.username%>'s Avatar" src="<%=user.avatar%>">
 		        </div>
 
 		        <div class="card-info"> 
