--- a/less/style.less
+++ b/less/style.less
@@ -171,6 +171,11 @@ a, #user-carousel, #artist-carousel, #event-carousel {
 }
 
 #userShowPic, #artistShowPic, #eventShowPic {
+	width: 100%;
+	height: 100%;
+	max-height: 200px;
+	max-width: 200px;
+	border-radius: 100%;
 	text-align: center;
 }
 
