--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,6 +148,11 @@ a:hover,
 #userShowPic,
 #artistShowPic,
 #eventShowPic {
+  width: 100%;
+  height: 100%;
+  max-height: 200px;
+  max-width: 200px;
+  border-radius: 100%;
   text-align: center;
 }
 .card-title h3 {
