edit pages now maintain the previous image in the image input field

--- a/views/artist/edit.ejs
+++ b/views/artist/edit.ejs
@@ -45,8 +45,8 @@
               <label class= "control-label" for="artistWebsite">Edit Website:</label>
               <input type="text" class= "form-control" name="website" value="<%=artist.website%>"><br />
 
-              <label class= "control-label" for="artistImage">Edit Image:</label>
-              <input type="text" class= "form-control" name="avatar" value=""><br />
+              <label class="control-label" for="artistImage">Edit Image:</label>
+              <input type="text" class= "form-control" name="avatar" value="<%=artist.avatar%>"><br />
 
               <label class= "control-label" for="artistDescription">Edit Artist Description:</label><br />
               <textarea name="description" rows="12" cols="80" placeholder="Description"><%=artist.description%></textarea><br /><br />
