--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -44,7 +44,7 @@
 						<input type="text" class= "form-control" name="date" placeholder="Event Date" value="<%=event.date%>"><br />
 
 						<label class= "control-label" for="updateEventImage">Update Event Image:</label>
-						<input type="text" class= "form-control" name="img" placeholder="Event Image" value=""><br />
+						<input type="text" class= "form-control" name="img" placeholder="Event Image" value="<%=event.img%>"><br />
 
 						<label class= "control-label" for="updateEventDescription">Update Event Description:</label><br />
 						<textarea name="description" rows="4" cols="40" placeholder="Description"><%=event.description%></textarea><br />
