--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -18,7 +18,7 @@
 			</ul>
 
 			<ul class="nav navbar-right">
-				<li><a id="nav-responsive" href="/artist/<%=currentArtist.id%>"><span class="glyphicon glyphicon-plus"></span>Back to <%=currentArtist.name%>'s Profile</a></li>
+				<li><a id="nav-responsive" href="/artist/<%=currentArtist.id%>">Back to <%=currentArtist.name%>'s Profile</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -42,7 +42,7 @@
 						<input type="text" class= "form-control" name="venue" placeholder="Venue"><br />
 
 						<label class= "control-label" for="eventDate">Event Date:</label>
-						<input type="text" class= "form-control" name="date" placeholder="Event Date"><br />
+						<input type="date" class= "form-control" name="date" placeholder="Event Date"><br />
 
 						<label class= "control-label" for="eventImage">Event Image:</label>
 						<input type="text" class= "form-control" name="img" placeholder="Image Link"><br />
