--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -21,7 +21,7 @@
 								</ul>
 
 								<ul class="nav navbar-right">
-									<li><a id="nav-responsive" href="/event"><span class="glyphicon glyphicon-plus"></span> Back to Events</a></li>
+									<li><a id="nav-responsive" href="/event">Back to Events</a></li>
 								</ul>
 							</div>
 						</nav>
