--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -20,7 +20,7 @@
 				</ul>
 
 				<ul class="nav navbar-right">
-					<li><a href="/user/<%= user.id %>">Back to <%=user.name%>'s Profile</a></li>
+					<li><a href="/user/<%= user.id %>">Back to <%=user.username%>'s Profile</a></li>
 				</ul>
 
 			</div>
