--- a/views/artist/edit.ejs
+++ b/views/artist/edit.ejs
@@ -61,7 +61,7 @@
 
   <footer class="container-fluid text-center">
     <form action="/logout" method="GET">
-        <input type="submit" class="btn-block" id="logout" value="Logout <%=user.username%>" />
+        <input type="submit" class="btn-block" id="logout" value="Logout <%=currentUser.username%>" />
     </form>
   </footer>
 
