--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -44,13 +44,13 @@
 
                   <div class="card-info"> <span class="card-title"><h3><%=artist.name%></h3></span>
 
-                    <a href="/artist/addUser/<%=user.id%>/<%=artist._id%>" class="btn btn-info btn-lg" id="like-button"><span class="glyphicon glyphicon-heart"></span> Like <%=artist.name%></a>
+                    <a href="/artist/addUser/<%=currentUser.id%>/<%=artist._id%>" class="btn btn-info btn-lg" id="like-button"><span class="glyphicon glyphicon-heart"></span> Like <%=artist.name%></a>
 
                   </div>
               </div>
             </div>
           </div>
-        
+
 
 <!--             TABS
  -->          <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
@@ -113,7 +113,7 @@
 <!--                ADD MEMBERS
  --><!--            only band members should be able to add a member
  -->                <% for (let i = 0; i < artist.bandMembers.length; i++) { -%>
-                      <%if (user.id.toString() === artist.bandMembers[i].user_id.toString()) {%>
+                      <%if (currentUser.id.toString() === artist.bandMembers[i].user_id.toString()) {%>
                         <div class="btn-group dropright">
                             <button type="button" class="btn btn-success">
                                Add Member
@@ -137,7 +137,7 @@
 <!--               only band members should be able to remove a member
  -->
                     <% for (let i = 0; i < artist.bandMembers.length; i++) { -%>
-                      <%if (user.id.toString() === artist.bandMembers[i].user_id.toString()) {%>
+                      <%if (currentUser.id.toString() === artist.bandMembers[i].user_id.toString()) {%>
                         <div class="btn-group dropright">
                             <button type="button" class="btn btn-danger">
                                Remove Member
@@ -181,7 +181,7 @@
 <!--                CREATE EVENT BUTTON
  --><!--            only band members should be able to create new events for the band
  -->                <% for (let i = 0; i < artist.bandMembers.length; i++) { -%>
-                      <%if (user.id.toString() === artist.bandMembers[i].user_id.toString()) {%>
+                      <%if (currentUser.id.toString() === artist.bandMembers[i].user_id.toString()) {%>
 
                         <form action="/event/new" method="GET">
                           <input id= "createNewEvent" class="btn-dark" type="submit" value="Create New Event">
@@ -214,7 +214,7 @@
 
 <!--             EDIT AND DELETE ARTIST BUTTONS
  -->        <% for (let i = 0; i < artist.bandMembers.length; i++) { -%>
-              <%if (user.id.toString() === artist.bandMembers[i].user_id.toString()) {%>
+              <%if (currentUser.id.toString() === artist.bandMembers[i].user_id.toString()) {%>
                 <div class="col-lg-12 col-sm-12">
             			<a class="btn btn-outline-dark btn-sm btn-block" id="edit-artist" href="/artist/<%= artist.id %>/edit">Edit <%=artist.name%></a>
             				<form action="/artist/<%= artist.id %>?_method=DELETE" method="POST">
@@ -229,7 +229,7 @@
 <!--   LOGOUT -->
   <footer class="container-fluid text-center">
     <form action="/logout" method="GET">
-        <input type="submit" class="btn-block" id="logout" value="Logout <%=user.username%>" />
+        <input type="submit" class="btn-block" id="logout" value="Logout <%=currentUser.username%>" />
     </form>
   </footer>
 
