--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -19,7 +19,7 @@
 			</ul>
 
 			<ul class="nav navbar-right">
-				<li><a id="nav-responsive" href="/user"><span class="glyphicon glyphicon-plus"></span> Back to Users</a></li>
+				<li><a id="nav-responsive" href="/user">Back to Users</a></li>
 			</ul>
 		</nav>
 	</header>
