--- a/less/style.less
+++ b/less/style.less
@@ -45,10 +45,6 @@ ul {
 	background-color: #ff7043;
 	color: white;
 	padding: 0 !important;
-	// max-width: 86.5vw !important;
-	// margin-left: 3.4vw !important;
-	// margin-left: 2.5vw;
-	// margin-right: -3vw;
 	&:hover {
 		background-color: #ffa270;
 		transition: .5s ease;
@@ -108,11 +104,13 @@ a, #user-carousel, #artist-carousel, #event-carousel {
 }
 
 #artistCarouselPic, #eventCarouselPic, #userCarouselPic {
-	width: 100%;
-	height: 100%;
-	max-width: 30vw;
-	max-height: 30vw;
+	max-width: 50%;
+	max-height: 50%;
 	border-radius: 100%;
+}
+.carousel-caption {
+	padding-top: 10px !important;
+	padding-bottom: 10px !important;
 }
 
 #artistListPic, #eventListPic, #userListPic {
@@ -317,9 +315,6 @@ div.col-md-12 {
 		max-height: 100%;
 		background-color: rgb(0, 0, 0);
 	}
-	h3 {
-		font-size: 6vw;
-	}
 }
 .carousel-indicators * {
 	max-width: 3vw;
@@ -408,5 +403,18 @@ div.col-md-12 {
 	  top: 0;
 		right: 0;
 	  padding-right: 2.5px;
+	}
+	.carousel h3 {
+		font-size: 16px;
+	}
+	#artistCarouselPic, #eventCarouselPic, #userCarouselPic {
+		max-width: 40%;
+		max-height: 40%;
+	}
+}
+@media (max-width: 350px) {
+	#artistCarouselPic, #eventCarouselPic, #userCarouselPic {
+		max-width: 30%;
+		max-height: 30%;
 	}
 }
