--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,11 +92,13 @@ a:hover,
 #artistCarouselPic,
 #eventCarouselPic,
 #userCarouselPic {
-  width: 100%;
-  height: 100%;
-  max-width: 30vw;
-  max-height: 30vw;
+  max-width: 50%;
+  max-height: 50%;
   border-radius: 100%;
+}
+.carousel-caption {
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
 }
 #artistListPic,
 #eventListPic,
@@ -291,9 +293,6 @@ div.col-md-12 {
   max-height: 100%;
   background-color: #000000;
 }
-#carousel h3 {
-  font-size: 6vw;
-}
 .carousel-indicators * {
   max-width: 3vw;
   max-height: 3vw;
@@ -381,5 +380,22 @@ div.col-md-12 {
     top: 0;
     right: 0;
     padding-right: 2.5px;
+  }
+  .carousel h3 {
+    font-size: 16px;
+  }
+  #artistCarouselPic,
+  #eventCarouselPic,
+  #userCarouselPic {
+    max-width: 40%;
+    max-height: 40%;
+  }
+}
+@media (max-width: 350px) {
+  #artistCarouselPic,
+  #eventCarouselPic,
+  #userCarouselPic {
+    max-width: 30%;
+    max-height: 30%;
   }
 }
