--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,12 +82,14 @@ a:hover,
   -ms-transform: translate(-50%, -50%);
   text-align: center;
   color: white;
+  max-height: 100%;
 }
 .indexLink:hover {
   font-weight: 500;
   color: white;
   text-decoration: none;
   text-transform: uppercase;
+  max-height: 100%;
 }
 #artistCarouselPic,
 #eventCarouselPic,
@@ -99,6 +101,11 @@ a:hover,
 .carousel-caption {
   padding-top: 10px !important;
   padding-bottom: 10px !important;
+}
+.carousel h3 {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 #artistListPic,
 #eventListPic,
