added bottom margin to carousel so it has space above the dots

--- a/less/style.less
+++ b/less/style.less
@@ -113,6 +113,7 @@ a, #user-carousel, #artist-carousel, #event-carousel {
 .carousel-caption {
 	padding-top: 10px !important;
 	padding-bottom: 10px !important;
+	margin-bottom: 5px !important;
 }
 .carousel h3 {
 	overflow: hidden;
