--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,6 +101,7 @@ a:hover,
 .carousel-caption {
   padding-top: 10px !important;
   padding-bottom: 10px !important;
+  margin-bottom: 5px !important;
 }
 .carousel h3 {
   overflow: hidden;
