fixed navbar right margin-right

--- a/less/style.less
+++ b/less/style.less
@@ -289,6 +289,10 @@ a.nav-item.nav-link, div.dropdown-menu.show, div.dropdown-menu{
 #sign-up {
 	padding: 10px 15px;
 }
+.navbar-right {
+	margin-right: 0 !important;
+}
+
 #browse, #navbar {
 	font-size: 20px;
 }
