--- a/public/css/style.css
+++ b/public/css/style.css
@@ -269,6 +269,9 @@ div.dropdown-menu {
 #sign-up {
   padding: 10px 15px;
 }
+.navbar-right {
+  margin-right: 0 !important;
+}
 #browse,
 #navbar {
   font-size: 20px;
