fixed inconsistent nav, fixed passwords in user seed data

--- a/less/style.less
+++ b/less/style.less
@@ -289,7 +289,7 @@ a.nav-item.nav-link, div.dropdown-menu.show, div.dropdown-menu{
 #sign-up {
 	padding: 10px 15px;
 }
-.navbar-right {
+.navbar-right, .navbar-brand {
 	margin-right: 0 !important;
 }
 
