--- a/public/css/style.css
+++ b/public/css/style.css
@@ -269,7 +269,8 @@ div.dropdown-menu {
 #sign-up {
   padding: 10px 15px;
 }
-.navbar-right {
+.navbar-right,
+.navbar-brand {
   margin-right: 0 !important;
 }
 #browse,
