--- a/less/style.less
+++ b/less/style.less
@@ -328,9 +328,13 @@ div.col-md-12 {
 		background-color: rgb(0, 0, 0);
 	}
 }
-.carousel-indicators * {
-	max-width: 3vw;
-	max-height: 3vw;
+.carousel-indicators {
+	margin-top: 5px;
+	margin-bottom: 10px;
+	margin-left: 0 !important;
+	bottom: 0 !important;
+	left: 0 !important;
+	width: 100% !important;
 }
 
 // NEW VIEW
