--- a/public/css/style.css
+++ b/public/css/style.css
@@ -305,9 +305,13 @@ div.col-md-12 {
   max-height: 100%;
   background-color: #000000;
 }
-.carousel-indicators * {
-  max-width: 3vw;
-  max-height: 3vw;
+.carousel-indicators {
+  margin-top: 5px;
+  margin-bottom: 10px;
+  margin-left: 0 !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
 }
 .create-new {
   color: #f4511e;
