--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -146,8 +146,8 @@
                      <form action="/login" method="POST" id="login">
                          <div class="form-group">
                            <h4>Sign In</h4>
-                               <input type="text" name="username" placeholder="Username">
-                               <input type="password" name="password" placeholder="Password">
+                               <input type="text" name="username" placeholder="Username" required>
+                               <input type="password" name="password" placeholder="Password" required>
                                <button type="submit" class= "btn btn-outline-secondary">Submit</button>
                          </div>
                          </form>
@@ -179,10 +179,10 @@
                      <form action="/register" method="POST" id="registration">
                        <div class="form-group">
                          <h4>Sign Up</h4>
-                           <input type="text" name="username" placeholder="Username">
-                           <input type="text" name="email" placeholder="Email">
-                           <input type="password" name="password" placeholder="Password">
-                           <button type="submit" class= "btn btn-primary">Register</button>
+                           <input type="text" name="username" placeholder="Username" required>
+                           <input type="text" name="email" placeholder="Email" required>
+                           <input type="password" name="password" placeholder="Password" required>
+                           <button type="submit" class="btn btn-primary">Register</button>
                        </div>
                      </form>
 
