--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -72,9 +72,11 @@
 	<footer class="container-fluid text-center">
 
 		<%if (loggedIn) { %>
-			<form action="/logout" method="GET">
-	   		<input type="submit" class="btn-block" id="logout" value="Logout <%=user.username%>" />
-			</form>
+			<div class="col-lg-12 col-sm-12">
+				<form action="/logout" method="GET">
+	   			<input type="submit" class="btn btn-block form-control" id="logout" value="Logout <%=user.username%>" />
+				</form>
+			</div>
 		<%}%>
 
 	</footer>
