--- a/views/artist/edit.ejs
+++ b/views/artist/edit.ejs
@@ -59,10 +59,12 @@
       </div>
     </main>
 
-  <footer class="container-fluid text-center">
-    <form action="/logout" method="GET">
-        <input type="submit" class="btn-block" id="logout" value="Logout <%=currentUser.username%>" />
-    </form>
+  <footer class="container-fluid">
+    <div class="col-lg-12 col-sm-12">
+      <form action="/logout" method="GET">
+        <input type="submit" class="btn btn-block form-control" id="logout" value="Logout <%=currentUser.username%>" />
+      </form>
+    </div>
   </footer>
 
   </body>
