--- a/views/artist/index.ejs
+++ b/views/artist/index.ejs
@@ -56,11 +56,13 @@
 	</main>
 
 <!-- 	LOGOUT
- -->	<footer class="container-fluid text-center">
+ -->	<footer class="container-fluid">
 		<%if (loggedIn) { %>
-			<form action="/logout" method="GET">
-	   			<input type="submit" class="btn-block" id="logout" value="Logout <%=currentUser.username%>" />
-			</form>
+			<div class="col-lg-12 col-sm-12">
+				<form action="/logout" method="GET">
+		   			<input type="submit" class="btn btn-block form-control" id="logout" value="Logout <%=currentUser.username%>" />
+				</form>
+			</div>
 		<%}%>
 	</footer>
 
