--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -67,9 +67,11 @@
       </main>
 
   <footer class="container-fluid">
-    <form action="/logout" method="GET">
+    <div class="col-lg-12 col-sm-12">
+      <form action="/logout" method="GET">
         <input type="submit" class="btn btn-block form-control" id="logout" value="Logout <%=currentUser.username%>" />
-    </form>
+      </form>
+    </div>
   </footer>
 
   </body>
