--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -227,10 +227,12 @@
  	    </main>
 
 <!--   LOGOUT -->
-  <footer class="container-fluid text-center">
-    <form action="/logout" method="GET">
-        <input type="submit" class="btn-block" id="logout" value="Logout <%=currentUser.username%>" />
-    </form>
+  <footer class="container-fluid">
+    <div class="col-lg-12 col-sm-12">
+      <form action="/logout" method="GET">
+        <input type="submit" class="btn btn-block form-control" id="logout" value="Logout <%=currentUser.username%>" />
+      </form>
+    </div>
   </footer>
 
   <script src="/js/app.js"></script>
