--- a/views/event/index.ejs
+++ b/views/event/index.ejs
@@ -52,11 +52,13 @@
 		
 	</main>		
 
-	<footer class="container-fluid text-center">
+	<footer class="container-fluid">
 		<%if (loggedIn) { %>
-			<form action="/logout" method="GET">
-	   			<input type="submit" class="btn-block" id="logout" value="Logout <%=user.username%>" />
-			</form>
+			<div class="col-lg-12 col-sm-12">
+				<form action="/logout" method="GET">
+		   			<input type="submit" class="btn btn-block form-control" id="logout" value="Logout <%=user.username%>" />
+				</form>
+			</div>
 		<%}%>
 	</footer>
 
