--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -123,10 +123,12 @@
 				</div>
 
 
-				<footer class="container-fluid text-center">
+			<footer class="container-fluid">
+				<div class="col-lg-12 col-sm-12">
 					<form action="/logout" method="GET">
-   				<input type="submit" class="btn-block" id="logout" value="Logout <%=user.username%>" />
-				</form>
+	   				<input type="submit" class="btn btn-block form-control" id="logout" value="Logout <%=user.username%>" />
+					</form>
+				</div>
 			</footer>
 
 
