--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -157,10 +157,12 @@
 	</main>
 
 	<!-- LOGOUT -->
-	<footer class="container-fluid text-center">
-		<form action="/logout" method="GET">
-	   	<input type="submit" class="btn-block" id="logout" value="Logout <%=currentUser.username%>" />
-		</form>
+	<footer class="container-fluid">
+		<div class="col-lg-12 col-sm-12">
+			<form action="/logout" method="GET">
+		   	<input type="submit" class="btn btn-block form-control" id="logout" value="Logout <%=currentUser.username%>" />
+			</form>
+		</div>
 	</footer>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
