--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -38,7 +38,7 @@
 
       <main>
         <% if (message) { -%>
-          <p id="home-message" style="background-color: rgba(255, 138, 101, 0.7)"><%= message %></p>
+          <p id="home-message"><%= message %></p>
         <% } -%>
 
 
@@ -134,7 +134,7 @@
            <div class="modal-content">
 
              <div class="modal-header">
-               <h5 class="modal-title" id="loginModalLabel">Login Below</h5>
+               <h4 class="modal-title" id="loginModalLabel">Login Below</h4>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -164,7 +164,7 @@
          <div class="modal-dialog" role="document">
            <div class="modal-content">
              <div class="modal-header">
-               <h5 class="modal-title" id="registerModalLabel">Register Below</h5>
+               <h4 class="modal-title" id="registerModalLabel">Register Below</h4>
 
                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                  <span aria-hidden="true">&times;</span>
