--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -10,7 +10,7 @@
 <body>
 
 	<header>
-		<nav id="navbar" class="navbar navbar-inverse">
+		<nav id="navbar">
 			<ul class="nav navbar-left">
 				<li class="active"><a id="nav-responsive" href="/">Home</a></li>
 				<li><a id="nav-responsive" href="/user">Users</a></li>
@@ -45,10 +45,10 @@
 						<input type="date" class= "form-control" name="date" placeholder="Event Date"><br />
 
 						<label class= "control-label" for="eventImage">Event Image:</label>
-						<input type="text" class= "form-control" name="img" placeholder="Image Link"><br />
+						<input type="text" class="form-control" name="img" placeholder="Image Link"><br />
 
 						<label class= "control-label" for="eventDescription">Event Description:</label><br />
-						<textarea name="description" rows="12" cols="80" placeholder="Description"></textarea><br /><br />
+						<textarea name="description" rows="8" class="form-control" placeholder="Description"></textarea><br /><br />
 
 						<button id= "new-submit" class="btn btn-dark mb-2 btn-block" type="submit">Submit Changes</button>
 					</form>
