--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -47,7 +47,7 @@
 						<input type="text" class="form-control" name="img" placeholder="Event Image" value="<%=event.img%>"><br />
 
 						<label class="control-label" for="updateEventDescription">Update Event Description:</label><br />
-						<textarea name="description" rows="4" cols="40" placeholder="Description"><%=event.description%></textarea><br />
+						<textarea name="description" rows="8" class="form-control" placeholder="Description" value="<%=event.description%>"></textarea><br />
 
 						<button id="edit-event" class="btn btn-dark mb-2 btn-block" type="submit">Submit Changes</button>
 					</form>
