--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -88,9 +88,10 @@
 			<div class="tab-content">
 				<div class="tab-pane fade in active" id="tab1">
 
+					<h3><%=user.username%>'s Info</h3>
 					<ul>
-						<li>Username: <%=user.username%> </li>
-						<li>Email: <%=user.email%> </li>
+						<li><span class="category">Username:</span> <%=user.username%> </li>
+						<li><span class="category">Email:</span> <%=user.email%> </li>
 					</ul>
 
 	      </div>
@@ -113,7 +114,7 @@
 	      	<ul>
 						<% for (let i = 0; i < user.eventsAttending.length; i++) { -%>
 							<li>
-								<a href="/event/<%=user.eventsAttending[i].id%>">
+								<a href="/event/<%=user.eventsAttending[i].event_id%>">
 									<%= user.eventsAttending[i].name%>
 								</a>
 							</li>
@@ -138,31 +139,28 @@
 
 
 		<!-- EDIT/DELETE USER -->	
-		<div class="col-lg-12 col-sm-12">
+		<div class="container-fluid">
 			<%if (user._id.toString() === currentUser._id.toString()) {%>
 
-				<a class="btn btn-outline-dark btn-sm btn-block" id="edit-user" href="/user/<%= user.id %>/edit">
+				<a class="btn btn-dark" id="edit-user" href="/user/<%=user.id%>/edit">
 					Edit <%=currentUser.username%>
 				</a>
 
 				<form action="/user/<%= user.id %>?_method=DELETE" method="POST">
-					<button class="btn btn-outline-danger btn-sm btn-block" type="submit">
+					<button class="btn btn-danger form-control" type="submit">
 						Delete <%=currentUser.username%>
 					</button>
 				</form>
 
 			<%}%>
 		</div>
-
 	</main>
 
 	<!-- LOGOUT -->
 	<footer class="container-fluid">
-		<div class="col-lg-12 col-sm-12">
-			<form action="/logout" method="GET">
-		   	<input type="submit" class="btn btn-block form-control" id="logout" value="Logout <%=currentUser.username%>" />
-			</form>
-		</div>
+		<form action="/logout" method="GET">
+	   	<input type="submit" class="btn btn-block form-control" id="logout" value="Logout <%=currentUser.username%>" />
+		</form>
 	</footer>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
