edit and delete event buttons show event name, event new page says submit changes

--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -50,7 +50,7 @@
 						<label class= "control-label" for="eventDescription">Event Description:</label><br />
 						<textarea name="description" rows="8" class="form-control" placeholder="Description"></textarea><br /><br />
 
-						<button id= "new-submit" class="btn btn-dark mb-2 btn-block" type="submit">Submit Changes</button>
+						<button id="new-submit" class="btn btn-dark mb-2 btn-block" type="submit">Create Event</button>
 					</form>
 
 				</div>
